--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -43,6 +43,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Page Templates
 	## Front page
 --------------------------------------------------------------*/
+/*
+  ** South Granvillge Senior Center Variables
+  */
+/*
+ ** Default Variables (don't change anything here)
+  */
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -231,10 +237,10 @@ input,
 select,
 textarea {
   color: #404040;
-  font-family: lato;
+  font-family: merriweather, sans-serif;
   font-size: 16px;
   font-size: 1rem;
-  line-height: 1.5; }
+  line-height: 1.75; }
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
@@ -736,7 +742,8 @@ object {
     -ms-flex-pack: center;
         justify-content: center;
     -ms-flex-align: center;
-        align-items: center; }
+        align-items: center;
+    width: 1024px; }
     .home .content-area .site-main article {
       margin: 0; }
     .home .content-area .site-main .learn-about-story {
@@ -750,9 +757,15 @@ object {
       -ms-flex-align: center;
           align-items: center;
       position: relative; }
+      @media screen and (min-width: 470px) {
+        .home .content-area .site-main .learn-about-story {
+          height: 386px; } }
       .home .content-area .site-main .learn-about-story img {
         height: 276px;
         width: auto; }
+        @media screen and (min-width: 470px) {
+          .home .content-area .site-main .learn-about-story img {
+            height: 386px; } }
       .home .content-area .site-main .learn-about-story .front-learn {
         position: absolute;
         bottom: 0;
@@ -780,6 +793,9 @@ object {
             padding: 0.3rem 1.5rem;
             border: 2px #000000 solid;
             margin: 0; }
+            @media screen and (min-width: 470px) {
+              .home .content-area .site-main .learn-about-story .front-learn a p {
+                padding: 0.4rem 3rem; } }
             .home .content-area .site-main .learn-about-story .front-learn a p:hover {
               border: none;
               background: #f5a623;
@@ -802,11 +818,142 @@ object {
           .home .content-area .site-main .learn-about-story .donate-btn a p {
             display: none; }
         @media screen and (min-width: 470px) {
+          .home .content-area .site-main .learn-about-story .donate-btn a i {
+            font-size: 24px; }
           .home .content-area .site-main .learn-about-story .donate-btn a p {
             display: initial; } }
-    .home .content-area .site-main .front-program,
-    .home .content-area .site-main .front-events,
-    .home .content-area .site-main .front-blog,
+    .home .content-area .site-main .program-event-post {
+      width: 100%; }
+      @media screen and (min-width: 470px) {
+        .home .content-area .site-main .program-event-post {
+          width: 386px; } }
+      .home .content-area .site-main .program-event-post .front-program,
+      .home .content-area .site-main .program-event-post .front-events,
+      .home .content-area .site-main .program-event-post .front-blog {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        background: #f5a623;
+        height: 138px;
+        width: 100%; }
+        @media screen and (min-width: 470px) {
+          .home .content-area .site-main .program-event-post .front-program,
+          .home .content-area .site-main .program-event-post .front-events,
+          .home .content-area .site-main .program-event-post .front-blog {
+            height: 386px; } }
+        .home .content-area .site-main .program-event-post .front-program a,
+        .home .content-area .site-main .program-event-post .front-events a,
+        .home .content-area .site-main .program-event-post .front-blog a {
+          text-decoration: none;
+          height: 100%;
+          width: 100%;
+          color: #000000;
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center; }
+        .home .content-area .site-main .program-event-post .front-program:hover,
+        .home .content-area .site-main .program-event-post .front-events:hover,
+        .home .content-area .site-main .program-event-post .front-blog:hover {
+          border: 2px #000000 solid 4px; }
+      .home .content-area .site-main .program-event-post .front-events {
+        background: #45cdcb; }
+      .home .content-area .site-main .program-event-post .front-blog {
+        background: #ffffff; }
+      .home .content-area .site-main .program-event-post .feature-gallery {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        position: relative;
+        height: 276px;
+        background: gray;
+        width: 100%; }
+        .home .content-area .site-main .program-event-post .feature-gallery .front-gallery {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-direction: column;
+              flex-direction: column;
+          position: absolute;
+          bottom: 0;
+          height: 138px;
+          width: 100%;
+          background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)); }
+          .home .content-area .site-main .program-event-post .feature-gallery .front-gallery h1 {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-pack: center;
+                justify-content: center;
+            text-align: center; }
+          .home .content-area .site-main .program-event-post .feature-gallery .front-gallery a {
+            text-decoration: none;
+            color: #000000; }
+            .home .content-area .site-main .program-event-post .feature-gallery .front-gallery a:hover {
+              color: #ffffff; }
+            .home .content-area .site-main .program-event-post .feature-gallery .front-gallery a p {
+              padding: 0.3rem 1.5rem;
+              border: 2px #000000 solid;
+              margin: 0; }
+              @media screen and (min-width: 470px) {
+                .home .content-area .site-main .program-event-post .feature-gallery .front-gallery a p {
+                  padding: 0.4rem 3rem; } }
+              .home .content-area .site-main .program-event-post .feature-gallery .front-gallery a p:hover {
+                border: none;
+                background: #f5a623;
+                z-index: 2;
+                opacity: 1; }
+      .home .content-area .site-main .program-event-post .involved-join {
+        height: 138px;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+            flex-direction: column;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        width: 100%; }
+        .home .content-area .site-main .program-event-post .involved-join:hover {
+          border: 2px #000000 solid 4px; }
+        .home .content-area .site-main .program-event-post .involved-join .front-involved {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-flow: row wrap;
+              flex-flow: row wrap;
+          width: 100%;
+          -ms-flex-pack: distribute;
+              justify-content: space-around; }
+          .home .content-area .site-main .program-event-post .involved-join .front-involved a {
+            text-decoration: none;
+            color: #000000; }
+            .home .content-area .site-main .program-event-post .involved-join .front-involved a:hover {
+              color: #ffffff; }
+            .home .content-area .site-main .program-event-post .involved-join .front-involved a p {
+              padding: 0.3rem 1.5rem;
+              border: 2px #000000 solid;
+              margin: 0; }
+              @media screen and (min-width: 470px) {
+                .home .content-area .site-main .program-event-post .involved-join .front-involved a p {
+                  padding: 0.4rem 3rem; } }
+              .home .content-area .site-main .program-event-post .involved-join .front-involved a p:hover {
+                border: none;
+                background: #f5a623;
+                z-index: 2;
+                opacity: 1; }
+          .home .content-area .site-main .program-event-post .involved-join .front-involved p {
+            border: none !important;
+            background: #F91E72; }
     .home .content-area .site-main .front-join {
       display: -ms-flexbox;
       display: flex;
@@ -814,12 +961,12 @@ object {
           justify-content: center;
       -ms-flex-align: center;
           align-items: center;
-      background: #f5a623;
+      background: #45cdcb;
       height: 138px;
       width: 100%; }
-      .home .content-area .site-main .front-program a,
-      .home .content-area .site-main .front-events a,
-      .home .content-area .site-main .front-blog a,
+      @media screen and (min-width: 470px) {
+        .home .content-area .site-main .front-join {
+          height: 386px; } }
       .home .content-area .site-main .front-join a {
         text-decoration: none;
         height: 100%;
@@ -831,97 +978,5 @@ object {
             justify-content: center;
         -ms-flex-align: center;
             align-items: center; }
-      .home .content-area .site-main .front-program:hover,
-      .home .content-area .site-main .front-events:hover,
-      .home .content-area .site-main .front-blog:hover,
       .home .content-area .site-main .front-join:hover {
         border: 2px #000000 solid 4px; }
-    .home .content-area .site-main .front-events {
-      background: #45cdcb; }
-    .home .content-area .site-main .front-blog {
-      background: #ffffff; }
-    .home .content-area .site-main .feature-gallery {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-          justify-content: center;
-      -ms-flex-align: center;
-          align-items: center;
-      position: relative;
-      height: 276px;
-      background: gray;
-      width: 100%; }
-      .home .content-area .site-main .feature-gallery .front-gallery {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: center;
-            justify-content: center;
-        -ms-flex-align: center;
-            align-items: center;
-        -ms-flex-direction: column;
-            flex-direction: column;
-        position: absolute;
-        bottom: 0;
-        height: 138px;
-        width: 100%;
-        background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)); }
-        .home .content-area .site-main .feature-gallery .front-gallery h1 {
-          display: -ms-flexbox;
-          display: flex;
-          -ms-flex-pack: center;
-              justify-content: center;
-          text-align: center; }
-        .home .content-area .site-main .feature-gallery .front-gallery a {
-          text-decoration: none;
-          color: #000000; }
-          .home .content-area .site-main .feature-gallery .front-gallery a:hover {
-            color: #ffffff; }
-          .home .content-area .site-main .feature-gallery .front-gallery a p {
-            padding: 0.3rem 1.5rem;
-            border: 2px #000000 solid;
-            margin: 0; }
-            .home .content-area .site-main .feature-gallery .front-gallery a p:hover {
-              border: none;
-              background: #f5a623;
-              z-index: 2;
-              opacity: 1; }
-    .home .content-area .site-main .involved-join {
-      height: 138px;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: column;
-          flex-direction: column;
-      -ms-flex-pack: center;
-          justify-content: center;
-      -ms-flex-align: center;
-          align-items: center;
-      width: 100%; }
-      .home .content-area .site-main .involved-join:hover {
-        border: 2px #000000 solid 4px; }
-      .home .content-area .site-main .involved-join .front-involved {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-        width: 100%;
-        -ms-flex-pack: distribute;
-            justify-content: space-around; }
-        .home .content-area .site-main .involved-join .front-involved a {
-          text-decoration: none;
-          color: #000000; }
-          .home .content-area .site-main .involved-join .front-involved a:hover {
-            color: #ffffff; }
-          .home .content-area .site-main .involved-join .front-involved a p {
-            padding: 0.3rem 1.5rem;
-            border: 2px #000000 solid;
-            margin: 0; }
-            .home .content-area .site-main .involved-join .front-involved a p:hover {
-              border: none;
-              background: #f5a623;
-              z-index: 2;
-              opacity: 1; }
-        .home .content-area .site-main .involved-join .front-involved p {
-          border: none !important;
-          background: #F91E72; }
-    .home .content-area .site-main .front-join {
-      background: #45cdcb; }
