comment out sass

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -53,7 +53,7 @@
         .program-event-post {
           width: 100%;
           @media screen and (min-width: $mobile_width) {
-            width: 386px;
+            // width: 386px;
           }
           .front-program,
           .front-events,
