remove article and header tags from learn-about-story class

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -21,6 +21,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        width: 100%;
         @media screen and (min-width: $mobile_width) {
           height: 386px;
         }
@@ -53,7 +54,7 @@
       .program-event-post {
         width: 100%;
         @media screen and (min-width: $mobile_width) {
-          // width: 386px;
+          width: 386px;
         }
         .front-program,
         .front-events,
